--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.modelmapper:modelmapper:3.1.0'
+	implementation files("libs/memory-v1.jar")
 }
 
 tasks.named('test') {
