--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.modelmapper:modelmapper:3.1.0'
 	implementation files("libs/memory-v1.jar")
+	implementation files("libs/memory-v2.jar")
 }
 
 tasks.named('test') {
