--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,17 @@ spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/test?&serverTimezone=UTC&
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.mapper-locations=classpath:/mapper/**/*.xml
+
+
+
+
+#---
+spring.config.activate.on-profile=dev
+url1=dev.db.com
+username1=dev_user
+password1=dev_pw
+#---
+spring.config.activate.on-profile=prod
+url1=prod.db.com
+username1=prod_user
+password1=prod_pw
