프로퍼티 정리

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 
-#VM \uc0ac\uc6a9 -Dspring.profiles.active=dev
-#spring.config.activate.useProfile=devideDev
+#VM \uc0ac\uc6a9 -Dspring.profiles.active=local
+#spring.config.activate.useProfile=localDev
 #spring.config.activate.driver=com.mysql.cj.jdbc.Driver
 #spring.config.activate.jdbc-url=jdbc:mysql://localhost:3306/test?&serverTimezone=UTC&autoReconnect=true&allowMultiQueries=true&characterEncoding=UTF-8
 #spring.config.activate.username=root
