--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,8 @@
-#url1=prod.db.com
-#username1=prod_user
-#password1=prod_pw
+
+#VM \uc0ac\uc6a9 -Dspring.profiles.active=prod
+#spring.config.activate.useProfile=devideProd
+#spring.config.activate.driver=com.mysql.cj.jdbc.Driver
+#spring.config.activate.jdbc-url=jdbc:mysql://localhost:3306/test?&serverTimezone=UTC&autoReconnect=true&allowMultiQueries=true&characterEncoding=UTF-8
+#spring.config.activate.username=root
+#spring.config.activate.password=123456
+#spring.config.activate.mapper-locations=classpath:/mapper/**/*.xml
