--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,26 @@
-spring.application.name=demo
-spring.datasource.driver=com.mysql.cj.jdbc.Driver
-spring.datasource.jdbc-url=jdbc:mysql://localhost:3306/test?&serverTimezone=UTC&autoReconnect=true&allowMultiQueries=true&characterEncoding=UTF-8
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.mapper-locations=classpath:/mapper/**/*.xml
-
-
-
-
+#profile \uc0ac\uc6a9
+#---
+spring.config.activate.on-profile=local
+spring.config.activate.useProfile=local
+spring.config.activate.driver=com.mysql.cj.jdbc.Driver
+spring.config.activate.jdbc-url=jdbc:mysql://localhost:3306/test?&serverTimezone=UTC&autoReconnect=true&allowMultiQueries=true&characterEncoding=UTF-8
+spring.config.activate.username=root
+spring.config.activate.password=123456
+spring.config.activate.mapper-locations=classpath:/mapper/**/*.xml
 #---
 spring.config.activate.on-profile=dev
-url1=dev.db.com
-username1=dev_user
-password1=dev_pw
+spring.config.activate.useProfile=dev
+spring.config.activate.driver=com.mysql.cj.jdbc.Driver
+spring.config.activate.jdbc-url=jdbc:mysql://localhost:3306/test?&serverTimezone=UTC&autoReconnect=true&allowMultiQueries=true&characterEncoding=UTF-8
+spring.config.activate.username=root
+spring.config.activate.password=123456
+spring.config.activate.mapper-locations=classpath:/mapper/**/*.xml
 #---
 spring.config.activate.on-profile=prod
-url1=prod.db.com
-username1=prod_user
-password1=prod_pw
+spring.config.activate.useProfile=prod
+spring.config.activate.driver=com.mysql.cj.jdbc.Driver
+spring.config.activate.jdbc-url=jdbc:mysql://localhost:3306/test?&serverTimezone=UTC&autoReconnect=true&allowMultiQueries=true&characterEncoding=UTF-8
+spring.config.activate.username=root
+spring.config.activate.password=123456
+spring.config.activate.mapper-locations=classpath:/mapper/**/*.xml
+
